k8s/deployment-strategies/canary/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-stable-svc
  namespace: deploy-strategies-lab
spec:
  selector:
    app: product-service
    track: stable
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-canary-svc
  namespace: deploy-strategies-lab
spec:
  selector:
    app: product-service
    track: canary
  ports:
    - port: 8000
      targetPort: 8000
